; ModuleID = '/home/carl/AnghaBench/linux/fs/extr_eventpoll.c_ep_set_ffd.c'
source_filename = "/home/carl/AnghaBench/linux/fs/extr_eventpoll.c_ep_set_ffd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.epoll_filefd = type { i32, %struct.file* }
%struct.file = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.epoll_filefd*, %struct.file*, i32)* @ep_set_ffd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ep_set_ffd(%struct.epoll_filefd* %0, %struct.file* %1, i32 %2) #0 {
  %4 = alloca %struct.epoll_filefd*, align 8
  %5 = alloca %struct.file*, align 8
  %6 = alloca i32, align 4
  store %struct.epoll_filefd* %0, %struct.epoll_filefd** %4, align 8
  store %struct.file* %1, %struct.file** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.file*, %struct.file** %5, align 8
  %8 = load %struct.epoll_filefd*, %struct.epoll_filefd** %4, align 8
  %9 = getelementptr inbounds %struct.epoll_filefd, %struct.epoll_filefd* %8, i32 0, i32 1
  store %struct.file* %7, %struct.file** %9, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load %struct.epoll_filefd*, %struct.epoll_filefd** %4, align 8
  %12 = getelementptr inbounds %struct.epoll_filefd, %struct.epoll_filefd* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
